--- a/mlops/unit_1_data_preparation/pipelines/xgboost_training/metadata.yaml
+++ b/mlops/unit_1_data_preparation/pipelines/xgboost_training/metadata.yaml
@@ -2,17 +2,18 @@ blocks:
 - all_upstream_blocks_executed: true
   color: null
   configuration:
+    file_source:
+      path: unit_1_data_preparation/global_data_products/training_set.py
     global_data_product:
-      project: unit_3_observability
       uuid: training_set
   downstream_blocks:
-  - hyperparameter_tuning/xgboost
+  - hyperparameter_tuning_xgboost
   - xgboost
   executor_config: null
   executor_type: local_python
   has_callback: false
   language: python
-  name: Training set
+  name: training_set
   retry_config: null
   status: executed
   timeout: null
@@ -23,7 +24,7 @@ blocks:
   color: null
   configuration:
     file_source:
-      path: unit_2_training/transformers/hyperparameter_tuning/xgboost.py
+      path: unit_1_data_preparation/transformers/hyperparameter_tuning_xgboost.py
   downstream_blocks:
   - xgboost
   - dashboard_data_source
@@ -31,66 +32,66 @@ blocks:
   executor_type: local_python
   has_callback: false
   language: python
-  name: Hyperparameter tuning/XGBoost
+  name: hyperparameter_tuning_xgboost
   retry_config: null
   status: executed
   timeout: null
   type: transformer
   upstream_blocks:
   - training_set
-  uuid: hyperparameter_tuning/xgboost
+  uuid: hyperparameter_tuning_xgboost
 - all_upstream_blocks_executed: true
   color: null
   configuration:
     file_source:
-      path: unit_2_training/data_exporters/xgboost.py
+      path: unit_1_data_preparation/data_exporters/xgboost.py
   downstream_blocks:
   - dashboard_data_source
   executor_config: null
   executor_type: local_python
   has_callback: false
   language: python
-  name: XGBoost
+  name: xgboost
   retry_config: null
   status: executed
   timeout: null
   type: data_exporter
   upstream_blocks:
   - training_set
-  - hyperparameter_tuning/xgboost
+  - hyperparameter_tuning_xgboost
   uuid: xgboost
 - all_upstream_blocks_executed: true
-  color: pink
+  color: null
   configuration:
     file_source:
-      path: unit_3_observability/custom/dashboard_data_source.py
+      path: unit_1_data_preparation/custom/dashboard_data_source.py
   downstream_blocks: []
   executor_config: null
   executor_type: local_python
   has_callback: false
   language: python
-  name: Dashboard data source
+  name: dashboard_data_source
   retry_config: null
-  status: failed
+  status: executed
   timeout: null
   type: custom
   upstream_blocks:
   - xgboost
-  - hyperparameter_tuning/xgboost
+  - hyperparameter_tuning_xgboost
   uuid: dashboard_data_source
 cache_block_output_in_memory: false
 callbacks: []
 concurrency_config: {}
 conditionals: []
-created_at: '2024-05-15 07:16:01.736430+00:00'
+created_at: '2024-06-05 21:32:41.057741+00:00'
 data_integration: null
 description: XGBoost is a scalable and efficient implementation of gradient boosted
-  decision trees, a powerful ensemble machine learning technique.
+  decision trees, a powerful ML technique.
 executor_config: {}
 executor_count: 1
 executor_type: null
 extensions: {}
-name: XGBoost training
+name: xgboost_training
 notification_config: {}
 remote_variables_dir: null
 retry_config: {}
@@ -104,8 +105,8 @@ tags:
 type: python
 uuid: xgboost_training
 variables:
-  early_stopping_rounds: 3
-  max_depth: 10
-  max_evaluations: 3
-variables_dir: /home/src/mage_data/unit_3_observability
+  early_stopping_rounds: 40
+  max_depth: 3
+  max_evaluations: 10
+variables_dir: /home/src/mage_data/unit_1_data_preparation
 widgets: []
